--- a/startbestanden/projecten_PF/kalender.css
+++ b/startbestanden/projecten_PF/kalender.css
@@ -29,5 +29,5 @@ table.kalender td, table.kalender th {
 	background-color:orange;
 	}
 .verjaardag{
-	background-color:darkorchid;
+	background-color:#0CF;
 	}
